FEATURE: UI   | Spinners for config field that take numbers [TuxPaper]
FEATURE: Plug | Plugins can now create submenus. [amc1]
FEATURE: Plug | Added code to allow plugins to get text input from a user in non-UI specific way. [amc1]
FEATURE: Plug | Plugins now have better support to organise file data within default save directories. [amc1]
FEATURE: Core | Added method to XFS specific allocation of new files [Greg]
FEATURE: Core | Added per-torrent max seeds parameter [Parg]
FEATURE: UI   | Console UI NAT test [Parg]

CHANGE: Core  | Improve the "presence" handling for torrents created by ourselves [Parg]
CHANGE: UI    | Open torrent windows now always has OK button enabled with warning message if pressed when in invalid state [TuxPaper]
CHANGE: UI    | Remove nag/donation window [TuxPaper]
CHANGE: UI    | Differentiate between libTorrent (Rakshasa) and libtorrent (Rasterbar) [TuxPaper]
CHANGE: Core  | NAT test moved to separate server

BUGFIX: Core  | If clipboard has just a " or "" in it the open-torrents dialog won't open [Parg]
BUGFIX: Core  | Setting of UDP port not working [Parg]
BUGFIX: Core  | Less flipping of downloads from queued <--> downloading during the time a FP seed is forced active [TuxPaper]
BUGFIX: Core  | Fix memory leak causing slow, but eventual OOM and slow down of Azureus [Parg]
BUGFIX: Core  | OSX: Handle volume not mounted on startup by erroring instead of creating a directory in /Volumes [TuxPaper]
BUGFIX: Core  | Fix to stop already complete downloads being moved by "move-on-completion" rules [amc1]
BUGFIX: UI    | Fix (some) painting issues in pieces+files view [TuxPaper]
BUGFIX: UI    | Fix to allow negative values for Multi-monitor window positions [TuxPaper]
BUGFIX: UI    | Fixed memory leak in "Mr Slidey" code [amc1]
BUGFIX: Plug  | Fixed bug where some listeners for table columns were not registered properly. [amc1]



2006.08.21 | Azureus 2.5.0.0

FEATURE: Core | Reduced CPU usage, especially in some unusual conditions [MjrTom]