@@ -1,0 +1,13 @@
+/**
+ * 
+ */
+package org.gudy.azureus2.plugins.ui.config;
+
+/**
+ * @author Allan Crooks
+ *
+ */
+public interface HyperlinkParameter extends LabelParameter {
+	public void setHyperlink(String url_location);
+	public String getHyperlink();
+}
